--- a/index.html
+++ b/index.html
@@ -1,32 +1,3 @@
-跳到内容
-搜索或跳转到...
-拉取 请求
-问题
-代码空间
-市场
-探索
- 
-@yhzxcz 
-YueJiang-nj
-/
-YueJiang-nj.github.io
-民众
-Fork your own copy of YueJiang-nj/YueJiang-nj.github.io
-代码
-问题
-拉取请求
-动作
-项目
-安全
-见解
-YueJiang-nj.github.io/index2.html
-@YueJiang-nj
-YueJiang-nj update
-Latest commit d891242 on 1月26日
- History
- 1 contributor
-1316 lines (1068 sloc)  74.9 KB
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
     <head>
@@ -70,8 +41,8 @@ Latest commit d891242 on 1月26日
 
         <link rel="icon" type="image/png" href="images/seal_icon.png">
         <script type="text/javascript" src="js/hidebib.js"></script>
-        <title>Yue Jiang</title>
-        <meta name="Homepage of Yue Jiang" http-equiv="Content-Type" content="Yue Jiang's Homepage">
+        <title>Linlu Zhao</title>
+        <meta name="Homepage of Linlu Zhao" http-equiv="Content-Type" content="Linlu Zhao's Homepage">
         <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600,400italic,600italic,300,300italic' rel='stylesheet' type='text/css'>
         <!-- Start : Google Analytics Code -->
         <script>
@@ -92,13 +63,13 @@ Latest commit d891242 on 1月26日
             <tr>
                 <td>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-                        <p align="center"><font size="7">Yue Jiang<img style="height:75px;" align="top" src="yuejiangname.jpg"> </font><br>
+                        <p align="center"><font size="7">Linlu Zhao<img style="height:75px;" align="top" src="Linlu Zhaoname.jpg"> </font><br>
                            <!--  <a href="http://gvv.mpi-inf.mpg.de/">GVV Group, Max Planck Institute for Informatics, Germany</a><br> -->
                             <!-- Office: Room 3220<br>
                             A.V. Williams Bldg.<br>
                             8223 Paint Branch Dr.<br>
                             College Park, MD 20742<br> -->
-                            Email: yue.jiang [at] aalto.fi<br>
+                            Email: 598430722@qq.com<br>
                             <a href="https://twitter.com/YueJiang_nj"
                            class="twitter-follow-button" data-show-count="true"
                            data-size="large">Follow
